Add a lot of functions

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=
-REACT_APP_BACK_END_URL=
+REACT_APP_API_URL=https://drinkingdeck.azurewebsites.net/api/v1
+REACT_APP_BACK_END_URL=https://drinkingdeck.azurewebsites.net
