--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@fontsource/roboto": "^5.0.13",
     "@hookform/resolvers": "^3.4.0",
     "@mui/icons-material": "^5.15.18",
-    "@mui/material": "^5.15.18",
+    "@mui/material": "^5.15.19",
+    "@mui/styles": "^5.15.19",
     "@reduxjs/toolkit": "^2.2.5",
     "@rollup/plugin-alias": "^5.1.0",
     "dotenv": "^16.4.5",
